manifests/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: app-info
  name: app-info
spec: {}
