manifests/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-info
  name: app-info
  namespace: app-info
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-info
  type: ClusterIP
