manifests/04_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-info
  name: app-info
  namespace: app-info
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
